--- a/CleanerSeeker/CleanerSeeker/JobSummaryView.xib
+++ b/CleanerSeeker/CleanerSeeker/JobSummaryView.xib
@@ -9,7 +9,20 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="JobSummaryVC" customModule="CleanerSeeker" customModuleProvider="target">
+            <connections>
+                <outlet property="addresslabel" destination="W07-JM-Gvz" id="UV5-Bc-M7Z"/>
+                <outlet property="bedsLabel" destination="qZi-Vn-ivB" id="LDp-J8-FlQ"/>
+                <outlet property="dateLabel" destination="do9-hP-y5k" id="2vv-mF-EP2"/>
+                <outlet property="hoursToWorkLabel" destination="0yr-Sz-p00" id="s0n-4w-QOO"/>
+                <outlet property="leftSquareView" destination="Hsj-Qb-1Em" id="FU1-86-eCb"/>
+                <outlet property="priceLabel" destination="oeb-Jo-2rp" id="uSI-3u-Pb9"/>
+                <outlet property="rightSquareView" destination="SLu-nm-2S0" id="kvH-id-HM8"/>
+                <outlet property="topView" destination="v2u-Oa-h42" id="UQA-Zv-Rth"/>
+                <outlet property="view" destination="vO6-VS-u6o" id="mJL-5Y-Pcq"/>
+                <outlet property="washsLabel" destination="kUv-vV-Chf" id="e0a-Ge-htb"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="vO6-VS-u6o">
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -19,19 +32,19 @@
                     <rect key="frame" x="10" y="134" width="300" height="300"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v2u-Oa-h42" userLabel="Top View">
-                            <rect key="frame" x="0.0" y="0.0" width="300" height="150"/>
+                            <rect key="frame" x="0.0" y="0.0" width="300" height="180"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address test with big text, so I will be able to see problems, or not M5N 1A3 " textAlignment="center" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="W07-JM-Gvz">
-                                    <rect key="frame" x="8" y="8" width="284" height="65"/>
+                                    <rect key="frame" x="8" y="8" width="284" height="80"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="65" id="d6Q-FE-pvB"/>
+                                        <constraint firstAttribute="height" constant="80" id="d6Q-FE-pvB"/>
                                     </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="XvL-8Z-OMI" userLabel="Rooms Stack">
-                                    <rect key="frame" x="41.5" y="89.5" width="217" height="17"/>
+                                <stackView opaque="NO" contentMode="scaleToFill" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="XvL-8Z-OMI" userLabel="Rooms Stack">
+                                    <rect key="frame" x="31.5" y="114.5" width="237" height="17"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bedrooms: {0}" textAlignment="natural" lineBreakMode="characterWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qZi-Vn-ivB">
                                             <rect key="frame" x="0.0" y="0.0" width="93.5" height="17"/>
@@ -40,7 +53,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Washrooms: {0}" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kUv-vV-Chf">
-                                            <rect key="frame" x="113.5" y="0.0" width="103.5" height="17"/>
+                                            <rect key="frame" x="133.5" y="0.0" width="103.5" height="17"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
@@ -48,7 +61,7 @@
                                     </subviews>
                                 </stackView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date: XX-XX-XXXX" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="do9-hP-y5k">
-                                    <rect key="frame" x="70" y="121.5" width="160" height="20.5"/>
+                                    <rect key="frame" x="70" y="151.5" width="160" height="20.5"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="160" id="vr6-qV-tob"/>
                                     </constraints>
@@ -62,24 +75,24 @@
                                 <constraint firstItem="W07-JM-Gvz" firstAttribute="leading" secondItem="v2u-Oa-h42" secondAttribute="leading" constant="8" id="Bym-c7-8oP"/>
                                 <constraint firstItem="do9-hP-y5k" firstAttribute="centerX" secondItem="v2u-Oa-h42" secondAttribute="centerX" id="Hmz-Gl-fJe"/>
                                 <constraint firstItem="W07-JM-Gvz" firstAttribute="top" secondItem="v2u-Oa-h42" secondAttribute="top" constant="8" id="Ivv-lL-Ovp"/>
-                                <constraint firstAttribute="height" constant="150" id="KYP-lC-Pdd"/>
+                                <constraint firstAttribute="height" constant="180" id="KYP-lC-Pdd"/>
                                 <constraint firstItem="XvL-8Z-OMI" firstAttribute="centerX" secondItem="v2u-Oa-h42" secondAttribute="centerX" id="XE2-kt-2MP"/>
                                 <constraint firstAttribute="bottom" secondItem="do9-hP-y5k" secondAttribute="bottom" constant="8" id="szM-jI-vnX"/>
                                 <constraint firstAttribute="trailing" secondItem="W07-JM-Gvz" secondAttribute="trailing" constant="8" id="tbG-zu-mnX"/>
-                                <constraint firstItem="do9-hP-y5k" firstAttribute="top" secondItem="XvL-8Z-OMI" secondAttribute="bottom" constant="15" id="xa5-Pi-9OC"/>
+                                <constraint firstItem="do9-hP-y5k" firstAttribute="top" secondItem="XvL-8Z-OMI" secondAttribute="bottom" constant="20" id="xa5-Pi-9OC"/>
                             </constraints>
                         </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hsj-Qb-1Em">
-                            <rect key="frame" x="0.0" y="151" width="149" height="149"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hsj-Qb-1Em" userLabel="Left Square View">
+                            <rect key="frame" x="0.0" y="181" width="149" height="119"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hours:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qBv-sD-X3y">
-                                    <rect key="frame" x="42" y="30" width="65" height="26.5"/>
+                                    <rect key="frame" x="42" y="28" width="65" height="26.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="{0}" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0yr-Sz-p00">
-                                    <rect key="frame" x="59.5" y="61.5" width="30.5" height="26.5"/>
+                                    <rect key="frame" x="59.5" y="62.5" width="30.5" height="26.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
@@ -87,23 +100,23 @@
                             </subviews>
                             <color key="backgroundColor" red="0.1916188197" green="0.30946899979999998" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
-                                <constraint firstItem="0yr-Sz-p00" firstAttribute="centerY" secondItem="Hsj-Qb-1Em" secondAttribute="centerY" id="5za-Nf-Atc"/>
                                 <constraint firstItem="0yr-Sz-p00" firstAttribute="centerX" secondItem="qBv-sD-X3y" secondAttribute="centerX" id="H6A-uW-opD"/>
                                 <constraint firstItem="qBv-sD-X3y" firstAttribute="centerX" secondItem="Hsj-Qb-1Em" secondAttribute="centerX" id="a7Z-VI-0sg"/>
-                                <constraint firstItem="qBv-sD-X3y" firstAttribute="top" secondItem="Hsj-Qb-1Em" secondAttribute="top" constant="30" id="ib7-03-Wa5"/>
+                                <constraint firstItem="qBv-sD-X3y" firstAttribute="top" secondItem="Hsj-Qb-1Em" secondAttribute="top" constant="28" id="ib7-03-Wa5"/>
+                                <constraint firstItem="0yr-Sz-p00" firstAttribute="top" secondItem="qBv-sD-X3y" secondAttribute="bottom" constant="8" id="vdn-Yb-hyl"/>
                             </constraints>
                         </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SLu-nm-2S0">
-                            <rect key="frame" x="150" y="151" width="150" height="149"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SLu-nm-2S0" userLabel="Right Square View">
+                            <rect key="frame" x="150" y="181" width="150" height="119"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4ng-ce-c1w">
-                                    <rect key="frame" x="47.5" y="30" width="55.5" height="26.5"/>
+                                    <rect key="frame" x="47.5" y="28" width="55.5" height="26.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="{0}" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oeb-Jo-2rp">
-                                    <rect key="frame" x="60.5" y="61.5" width="30.5" height="26.5"/>
+                                    <rect key="frame" x="60.5" y="62.5" width="30.5" height="26.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
@@ -111,11 +124,11 @@
                             </subviews>
                             <color key="backgroundColor" red="0.1916188197" green="0.30946899979999998" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
-                                <constraint firstItem="4ng-ce-c1w" firstAttribute="top" secondItem="SLu-nm-2S0" secondAttribute="top" constant="30" id="58w-Au-6Ka"/>
+                                <constraint firstItem="4ng-ce-c1w" firstAttribute="top" secondItem="SLu-nm-2S0" secondAttribute="top" constant="28" id="58w-Au-6Ka"/>
+                                <constraint firstItem="oeb-Jo-2rp" firstAttribute="top" secondItem="4ng-ce-c1w" secondAttribute="bottom" constant="8" id="8AL-1U-nlX"/>
                                 <constraint firstItem="oeb-Jo-2rp" firstAttribute="centerX" secondItem="4ng-ce-c1w" secondAttribute="centerX" id="APd-Cp-0mG"/>
                                 <constraint firstAttribute="width" constant="150" id="IWL-FD-mmG"/>
                                 <constraint firstItem="4ng-ce-c1w" firstAttribute="centerX" secondItem="SLu-nm-2S0" secondAttribute="centerX" id="YtS-39-iwr"/>
-                                <constraint firstItem="oeb-Jo-2rp" firstAttribute="centerY" secondItem="SLu-nm-2S0" secondAttribute="centerY" id="h7a-UW-U1W"/>
                             </constraints>
                         </view>
                     </subviews>
